<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/actionToggleHighlight"
        android:title="@string/toggle_highlight">
    </item>
    <item
        android:id="@+id/animateX"
        android:title="@string/animate_x">
    </item>
    <item
        android:id="@+id/animateY"
        android:title="@string/animate_y">
    </item>
    <item
        android:id="@+id/animateXY"
        android:title="@string/animate_xy">
    </item>
    <item
        android:id="@+id/actionToggleAdjustXLegend"
        android:title="@string/toggle_adjustxlegend">
    </item>
    <item
        android:id="@+id/actionSave"
        android:title="@string/save_to_sd_card">
    </item>
    <item
        android:id="@+id/actionTogglePinch"
        android:title="@string/toggle_pinchzoom">
    </item>
    <item
        android:id="@+id/actionToggleAutoScaleMinMax"
        android:title="@string/toggle_auto_scale_min_max">
    </item>
    <item
        android:id="@+id/actionToggleMakeShadowSameColorAsCandle"
        android:title="Toggle shadow same color">
    </item>

</menu>