<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wallpapers"
    tools:context="firenoid.com.istumo3.fragment.HistoryFragment">

    <Button
        android:id="@+id/button6"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="30dp"
        android:background="@mipmap/backicon"
        android:elevation="5dp"
        android:onClick="pressback" />

    <Button
        android:id="@+id/buttonCalendar"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_gravity="top|end"
        android:layout_marginEnd="20dp"
        android:background="@drawable/calendar2"
        android:visibility="gone" />

    <TextView
        android:id="@+id/totalHourSettingHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart3History"
        android:layout_width="221dp"
        android:layout_height="238dp"


        android:layout_gravity="top|center|end"
        android:layout_marginTop="400dp"
        android:tag="3"
        android:visibility="gone" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart2History"
        android:layout_width="212dp"


        android:layout_height="237dp"
        android:layout_gravity="top|center|start"
        android:layout_marginTop="300dp"
        android:tag="2"
        android:visibility="gone">

    </com.github.mikephil.charting.charts.PieChart>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart1History"
        android:layout_width="403dp"
        android:layout_height="288dp"


        android:layout_gravity="top|center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="78dp"
        android:tag="1"
        android:visibility="gone">

    </com.github.mikephil.charting.charts.PieChart>

    <ImageView
        android:id="@+id/backgourndhistory"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_gravity="bottom"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/tabbarbackground"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageViewline"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/line"
        android:src="@drawable/iconflouid"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageViewpie"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/pie"
        android:src="@drawable/iconpiechart"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageViewbar"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/bar"
        android:src="@drawable/iconlinechart"
        android:visibility="visible" />

    <!-- <FrameLayout
        android:layout_width="233dp"
        android:layout_height="209dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="40dp"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="202dp"
            android:layout_height="169dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/circle_progress_background"
            android:rotation="-90" />

        <ProgressBar
            android:id="@+id/circle_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="202dp"
            android:layout_height="168dp"
            android:indeterminate="false"
            android:max="100"
            android:progressDrawable="@drawable/circle_progress_foreground"
            android:rotation="-90" />
    </FrameLayout>
-->
    <com.github.mikephil.charting.charts.RadarChart
        android:id="@+id/chart1radar"
        android:layout_width="match_parent"
        android:layout_height="486dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="80dp"
        android:visibility="visible" />


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart1Line"
        android:layout_width="match_parent"
        android:layout_height="338dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="80dp"
        android:visibility="gone" />


</FrameLayout>
