<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="firenoid.com.istumo3.fragment.SettingsFragment">

    <Button
        android:id="@+id/button8"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="30dp"
        android:background="@mipmap/backicon"
        android:elevation="5dp"
        android:onClick="pressback"
        />

    <LinearLayout
        android:id="@+id/gito"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/darkblue"
            android:gravity="center"
            android:orientation="vertical">


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#fff" />

            <Button
                android:id="@+id/buttonnotification"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:background="@color/bg_register"
                android:text="@string/tracking_settings"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:visibility="visible" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="182dp"
                    android:layout_height="33dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="80dp"
                    android:gravity="center"
                    android:text="@string/sound"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/toggleButtonnsoundOn"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/iconcheck35" />

                <Button
                    android:id="@+id/toggleButtonnsoundOff"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"

                    android:layout_weight="1"
                    android:background="@drawable/iconclose3"
                    android:gravity="center"
                    android:visibility="visible" />
            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="182dp"
                    android:layout_height="33dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="80dp"
                    android:gravity="center"
                    android:text="@string/nav_notifications"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/toggleButtonnotificationOn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/iconcheck35"
                    android:gravity="right" />

                <Button
                    android:id="@+id/toggleButtonnotificationOff"
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginEnd="5dp"
                    android:background="@drawable/iconclose3"
                    android:gravity="right"
                    android:visibility="visible" />
            </LinearLayout>



            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#fff" />



            <LinearLayout
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView433"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/time_intervale"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/toggleButton3notification11"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/iconcheck35"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/toggleButtonnsoundOff1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"

                    android:layout_weight="1"
                    android:background="@drawable/iconclose3"
                    android:gravity="center"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:background="@color/darkblue"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/view55"
                    android:layout_width="182dp"
                    android:layout_height="33dp"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/device_connected"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/toggleButton4notification2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/iconcheck35"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/toggleButtonnotificationOff2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"

                    android:layout_weight="1"
                    android:background="@drawable/iconclose3"
                    android:gravity="center"
                    android:visibility="gone" />
            </LinearLayout>


            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:gravity="center"
                android:orientation="horizontal">


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:alpha="0.3"
        android:contentDescription="@string/Time"
        android:src="@drawable/ic_settings_black_24dp" />

</FrameLayout>
